2008-07-05  Mark Probst  <mark.probst@gmail.com>

	* docs/generic-sharing: Docs about porting generic sharing.

2008-07-04  Zoltan Varga  <vargaz@gmail.com>

	* scripts/patch-quiet.sh (src): Fix verbose mode.

2008-07-03  Mark Probst  <mark.probst@gmail.com>

	* docs/generic-sharing: New documentation file about generic code
	sharing.  Currently contains information about examining stack
	frames of generic shared code.

2008-07-03  Zoltan Varga  <vargaz@gmail.com>

	* scripts/patch-quiet.sh: New helper script.

2008-07-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* data/net_1_1/machine.config: Ignore system.windows.forms section.
	* data/net_2_0/machine.config: Define system.windows.forms section.

2008-06-30  Alp Toker  <alp@nuanti.com>

	* configure.in:
	* acinclude.m4: Remove concatenation syntax from doltlibtool to support
	old versions of bash and re-enable dolt.

2008-06-26  Alp Toker  <alp@nuanti.com>

	* acinclude.m4: Prospective dolt fix for the build bot. Fix syntax to work
	with older bash versions.

2008-06-26  Alp Toker  <alp@nuanti.com>

	* acinclude.m4: Update dolt to the latest git version 5e9eef10. (The one we
	had wasn't in fact the latest version and had a known bug.)

2008-06-25  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Enable dolt by default as an experiment.

	* acinclude.m4: Update dolt to the latest git version.

2008-06-23  Andreas Färber  <andreas.faerber@web.de>

	* data/Makefile.am (EXTRA_DIST): Distribute mono.d.

	Contributed unter MIT/X11 license.

2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove -D_FILE_OFFSET_BITS=64 from the CPPFLAGS passed to
	libgc on sparc. Fixes #323138.

2008-06-05  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Add configure option for DTrace.
	* dtrace-prelink.sh: New file, helper script for DTrace builds.
	* data/mono.d: New file, defines the DTrace 'mono' provider.

	Contributed unter MIT/X11 license.

2008-05-31  Andreas Färber  <andreas.faerber@web.de>
